--- a/airline/templates/airline/passenger_flight_history.html
+++ b/airline/templates/airline/passenger_flight_history.html
@@ -14,6 +14,8 @@
             <th>Destination</th>
             <th>Departure Date</th>
             <th>Booking Date</th>
+            <th>Seat Number</th>
+            <th>Price Paid</th>
         </tr>
     </thead>
     <tbody>
@@ -24,6 +26,8 @@
             <td>{{ history.flight.destination }}</td>
             <td>{{ history.flight.departure_date }}</td>
             <td>{{ history.booking_date }}</td>
+            <td>{{ history.seat_number }}</td>
+            <td>{{ history.price_paid }}</td>
         </tr>
         {% endfor %}
     </tbody>
